--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^4.0.0",
     "loopback-connector-es": "^1.4.1",
+    "loopback-connector-redis": "^0.1.0",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^2.0.0"
   },
